Fix broken CSS rules

--- a/src/globals.css
+++ b/src/globals.css
@@ -24,14 +24,14 @@ body{
     background-color: var(--background-dark);
 }
 
-:global(div#root){
+div#root{
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     min-height: 100dvh;
 }
 
-:global(div#content){
+div#content{
     margin: 100px auto;
     width: 100%;
     max-width: 1280px;
